Committing to branch1

--- a/GolfSweden/Views/Shared/_Layout.cshtml
+++ b/GolfSweden/Views/Shared/_Layout.cshtml
@@ -4,7 +4,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" /> 
         <link href="~/assets/css/bootstrap.css" rel="stylesheet" />
-        <link href="~/assets/css/Site.css" rel="stylesheet" />        
+        <link href="~/assets/css/Site.css" rel="stylesheet" />   
+        <link href="../../assets/css/TobPlugins.css" rel="stylesheet" type="text/css" />     
     </head>
     <body>
         <div id="body" class="page">
@@ -15,7 +16,8 @@
         </footer>        
     </body>
 
-<script src="http://code.jquery.com/jquery-1.8.1.min.js" type="text/javascript"></script>
+<script src="http://code.jquery.com/jquery-1.8.1.js" type="text/javascript"></script>
 <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCkApSU5IHAUJ4nZwH4TKRYDjQSfsbwlcM&sensor=false"> </script>
+<script src="../../assets/js/TobPlugins.js" type="text/javascript"></script>
 <script src="~/assets/js/Site.js"></script>
 </html>
