--- a/GolfSweden/Views/Home/Review.cshtml
+++ b/GolfSweden/Views/Home/Review.cshtml
@@ -1,16 +1,17 @@
 ﻿<div style="color: #a1a1a1; width: 500px; height: auto; background-color: #f4f4f4; padding: 25px;">
 
 <br />
-<select id="rev_club">
-    <option value="-1">- - - Välj golfklubb - - -</option>
-    <option value="-1">Klubb 1</option>
-    <option value="-1">Klubb 2</option>
-    <option value="-1">Klubb 3</option>
-    <option value="-1">Dömle Golf & Country Club</option>
-</select>
-<br /><br />
+Klubb<br />
+<div class="selectLoading">
+    <select id="rev_club">
+        <option value="-1"> Laddar golfklubbar...</option>    
+    </select>
+    <img src="../../assets/img/ajax-loader.gif" />
+</div>
+<br /><br />    
 
-    
+    <h1>Dina uppgifter</h1>
+    <hr />
     Namn (Alias):<br />
     <input type="text" />
 
@@ -20,14 +21,12 @@
     <input type="text" />
 
     <br /><br />
-
-<select id="rev_club">
-    <option value="-1">- - - Välj din hemmaklubb - - -</option>
-    <option value="-1">Klubb 1</option>
-    <option value="-1">Klubb 2</option>
-    <option value="-1">Klubb 3</option>
-    <option value="-1">Dömle Golf & Country Club</option>
-</select>
+<div class="selectLoading">
+    <select id="rev_homeClub">
+        <option value="-1"> Laddar golfklubbar...</option>
+    </select>
+    <img src="../../assets/img/ajax-loader.gif" />
+</div>
 
     <br /><br />
 
@@ -36,9 +35,98 @@
 
     <br /><br />
 
-    <div id="genderRadio" class="radioButtons">
+    <div id="genderRadio" class="tobRadioButton">
         <button type="button" value="man">Man</button>
         <button type="button" value="kvinna">Kvinna</button>
     </div>
+
+    <br /><br />
+
+    <h1>Betyg klubb</h1>
+    <hr /><br />
+
+    Spelad bana<br />
+    <div class="selectLoaded">
+    <select id="rev_courses">
+        <option value="-1">- - - Välj spelad bana - - -</option>
+    </select>
+    <img src="../../assets/img/ajax-loader.gif" />
+    </div>
+    <br /><br />
+
+    Klubbhus    
+    <div id="rateClubHouse" class="tobRadioButton">
+        <button type="button" value="1">1</button>
+        <button type="button" value="2">2</button>
+        <button type="button" value="3">3</button>
+        <button type="button" value="4">4</button>
+        <button type="button" value="5">5</button>
+    </div>    <br />
+    <textarea id="rateClubHouseComment" rows="3" class="reviewTextarea">
+    </textarea><br /><br />
+
+    Restaurang    
+    <div id="rateRestaurant" class="tobRadioButton">
+        <button type="button" value="1">1</button>
+        <button type="button" value="2">2</button>
+        <button type="button" value="3">3</button>
+        <button type="button" value="4">4</button>
+        <button type="button" value="5">5</button>
+    </div>    <br />
+    <textarea id="rateRestaurantComment" rows="3" class="reviewTextarea">
+    </textarea><br /><br />
+
+    Träningsfaciliteter    
+    <div id="rateTrainingGround" class="tobRadioButton">
+        <button type="button" value="1">1</button>
+        <button type="button" value="2">2</button>
+        <button type="button" value="3">3</button>
+        <button type="button" value="4">4</button>
+        <button type="button" value="5">5</button>
+    </div>    <br />
+    <textarea id="rateTrainingComment" rows="3" class="reviewTextarea">
+    </textarea><br /><br />
+
+    <h1>Spelad bana</h1>
+    <hr /><br />
+
+    Finish
+    <div id="rateFinish" class="tobRadioButton">
+        <button type="button" value="1">1</button>
+        <button type="button" value="2">2</button>
+        <button type="button" value="3">3</button>
+        <button type="button" value="4">4</button>
+        <button type="button" value="5">5</button>
+    </div>    <br />
+    <textarea id="rateFinishComment" rows="3" class="reviewTextarea">
+    </textarea><br /><br />
+
+    Snabbhet greener
+    <div id="rateGreens" class="tobRadioButton">
+        <button type="button" value="1">1</button>
+        <button type="button" value="2">2</button>
+        <button type="button" value="3">3</button>
+        <button type="button" value="4">4</button>
+        <button type="button" value="5">5</button>
+    </div>    <br />
+    <textarea id="rateGreensComment" rows="3" class="reviewTextarea">
+    </textarea><br /><br />
+
+    Svårighetsgrad
+    <div id="rateDifficulty" class="tobRadioButton">
+        <button type="button" value="1">1</button>
+        <button type="button" value="2">2</button>
+        <button type="button" value="3">3</button>
+        <button type="button" value="4">4</button>
+        <button type="button" value="5">5</button>
+    </div>    <br />
+    <textarea id="rateDifficultyComment" rows="3" class="reviewTextarea">
+    </textarea><br /><br />
+
+    Kommentar<br />
+    <textarea id="rateOverallComment" rows="3" class="reviewTextarea">
+    </textarea><br /><br />
+
+    <button id="submitReview" type="button" class="greenBtn">Spara</button>
 
 </div>
